--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ https://templatemo.com/tm-591-villa-agency
             <ul>
               <li>
                 <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
-                <h4>500+ Guests<br><span>Spacious Seating</span></h4>
+                <h4>180+ Guests<br><span>Spacious Seating</span></h4>
               </li>
               <li>
                 <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
@@ -334,24 +334,24 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-12">
           <div class="wrapper">
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                 <div class="counter">
                   <h2 class="timer count-title count-number" data-to="100" data-speed="1000"></h2>
                    <p class="count-text ">Grand Events<br>Hosted</p>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                 <div class="counter">
                   <h2 class="timer count-title count-number" data-to="12" data-speed="1000"></h2>
                   <p class="count-text ">Years of <br>Hospitality Excellence</p>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <!-- <div class="col-lg-4">
                 <div class="counter">
                   <h2 class="timer count-title count-number" data-to="24" data-speed="1000"></h2>
                   <p class="count-text ">Satisfied Clients<br>Every Month</p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
