--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
                         <!-- <h1>Mpus</h1> -->
-                        <img  src="assets/images/mpus/minihalllogo.png" alt="" style="width: 75px; height: 75px;" >
+                        <img  src="assets/images/mpus/logo.png" alt="" style="width: 75px; height: 75px;" >
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
@@ -137,7 +137,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-5">
           <div class="section-heading">
-            <h6 class="">| Featured</h6>
+            <h6 class="">| Mpus</h6>
             <h2>Elegant Banquet Hall for Special Events</h2>
           </div>
           <div class="accordion" id="accordionExample">
@@ -485,37 +485,37 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0011.jpg" alt="Grand Hall"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0011.jpg" alt="Grand Hall"></a>
             <span class="category">Grand Hall</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0012.jpg" alt="Royal Dining"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0012.jpg" alt="Royal Dining"></a>
             <span class="category">Royal Dining</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0013.jpg" alt="Wedding Setup"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0013.jpg" alt="Wedding Setup"></a>
             <span class="category">Wedding Setup</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0014.jpg" alt="Conference Hall"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0014.jpg" alt="Conference Hall"></a>
             <span class="category">Conference Hall</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0015.jpg" alt="Luxury Lounge"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0015.jpg" alt="Luxury Lounge"></a>
             <span class="category">Luxury Lounge</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="gallery-details.html"><img src="assets/images/mpus/IMG-20250219-WA0016.jpg" alt="Outdoor Event Space"></a>
+            <a href="properties.html"><img src="assets/images/mpus/IMG-20250219-WA0016.jpg" alt="Outdoor Event Space"></a>
             <span class="category">Outdoor Event Space</span>
           </div>
         </div>
@@ -705,7 +705,7 @@ Good place to conduct function</p> <img src="assets/images/review/naryanan ramak
       <div class="row">
         <div class="col-lg-4 offset-lg-4">
           <div class="section-heading text-center">
-            <h6>| Contact Us</h6>
+            <h6></h6>
             <h2>Get In Touch</h2>
           </div>
         </div>
