--- a/properties.html
+++ b/properties.html
@@ -68,7 +68,7 @@
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
                         <!-- <h1>Mpus</h1> -->
-                        <img  src="assets/images/mpus/minihalllogo.png" alt="" style="width: 75px; height: 75px;" >
+                        <img  src="assets/images/mpus/logo.png" alt="" style="width: 75px; height: 75px;" >
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
