--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
                         <!-- <h1>Mpus</h1> -->
-                        <img  src="assets/images/mpus/minihalllogo.png" alt="" style="width: 75px; height: 75px;" >
+                        <img  src="assets/images/mpus/logo.png" alt="" style="width: 75px; height: 75px;" >
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
@@ -102,6 +102,94 @@
     </div>
   </div>
 
+
+  <section class="events-section py-5">
+    <div class="container">
+        <h2 class="text-center mb-4">Events at Mpus Banquet Hall</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/marriage.jpg')">
+                    <div class="overlay">
+                        <h4>Wedding Ceremony</h4>
+                        <p>Celebrate your dream wedding with elegance and grandeur.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/birthday.jpg')">
+                    <div class="overlay">
+                        <h4>Birthday Parties</h4>
+                        <p>Make birthdays unforgettable with themed decorations and fun.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/baby-shower.jpeg');">
+                    <div class="overlay">
+                        <h4>Baby Shower</h4>
+                        <p>Welcome the new joy of life with a beautiful gathering.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/corporate.jpeg');">
+                    <div class="overlay">
+                        <h4>Corporate Events</h4>
+                        <p>Host business meetings, conferences, and corporate parties.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/engagement.jpg');">
+                    <div class="overlay">
+                        <h4>Engagement Ceremony</h4>
+                        <p>Start your forever journey with a memorable engagement event.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/reception.jpeg');">
+                    <div class="overlay">
+                        <h4>Reception Parties</h4>
+                        <p>A grand celebration to mark the beginning of a new journey.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/ear.jpeg');">
+                    <div class="overlay">
+                        <h4>Ear Piercing Ceremony</h4>
+                        <p>A traditional celebration marking a child's ear piercing with family blessings.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/60th.jpeg');">
+                    <div class="overlay">
+                        <h4>60th Birthday Celebration</h4>
+                        <p>A grand event to celebrate a person's 60th year with rituals and family gatherings.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="event-card" style="background-image: url('assets/images/events-img/ceremony.jpeg');">
+                    <div class="overlay">
+                        <!-- <h4>Reception Parties</h4> -->
+                        <p>A beautiful tradition celebrating a girl's transition into womanhood with blessings and rituals.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
   <!-- Services Section -->
 <section class="services py-5">
     <div class="container">
@@ -109,39 +197,14 @@
             <h2 class="section-title">Our Services</h2>
             <p class="section-subtitle">We offer premium services to make your events memorable.</p>
         </div>
+       
         <div class="row mt-4">
-            <!-- Service 1 -->
+            <!-- Service 5 -->
             <div class="col-md-4">
                 <div class="service-card">
-                    <i class="fas fa-building"></i>
-                    <h4>Wedding & Reception</h4>
-                    <p>Celebrate your special moments with our well-equipped and beautifully decorated venue.</p>
-                </div>
-            </div>
-            <!-- Service 2 -->
-            <div class="col-md-4">
-                <div class="service-card">
-                    <i class="fas fa-utensils"></i>
-                    <h4>Catering Services</h4>
-                    <p>Delight your guests with our wide range of vegetarian and non-vegetarian cuisine options.</p>
-                </div>
-            </div>
-            <!-- Service 3 -->
-            <div class="col-md-4">
-                <div class="service-card">
-                    <i class="fas fa-camera"></i>
-                    <h4>Photography & Videography</h4>
-                    <p>Capture every special moment with our professional photography & videography services.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <!-- Service 4 -->
-            <div class="col-md-4">
-                <div class="service-card">
-                    <i class="fas fa-music"></i>
-                    <h4>Live Music & DJ</h4>
-                    <p>Add excitement to your events with live music and DJ services.</p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h4>Prime Location</h4>
+                    <p>Conveniently located with easy access to major roads and transport hubs.</p>
                 </div>
             </div>
             <!-- Service 5 -->
@@ -191,38 +254,7 @@
     </div>
 </section>
 <style>
-    /* * Service Card * */
-.service-card {
-    background: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: 0.3s;
-}
-
-.service-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-}
-
-.service-card i {
-    font-size: 2.5rem;
-    color: #f35525;
-    margin-bottom: 10px;
-}
-
-.service-card h4 {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    color: #333;
-}
-
-.service-card p {
-    font-size: 0.9rem;
-    color: #666;
-}
-
+   
 
 
 </style>
