--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <!-- <h1>Villa</h1> -->
+                      <img  src="assets/images/mpus/logo.png" alt="" style="width: 75px; height: 75px;" >
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
